"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-12-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-04:
	  Some fixes for pending-queue insertion, w.r.t. weak rules.  
	  No regressions, still not perfect... investigating.


2007-12-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-03:
	  First round of test cases, discovered some discrepancies with
		reference version of prsim (some disagreeable).
	  Removed a failing assertion: State-prsim.cc:flush_pending_queue.
	  Still dies on a large test, hard to reduce. 


	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-02:
	  Completed first draft of weak rule/events.
		Enabled PRSIM_WEAK_RULES switch.
	  No regressions, but desparately need new test cases, forthcoming.
		This needs rigorous testing.


2007-12-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-01:
	  Grandchild branch for 'weak' prsim rules.
		Switch: PRSIM_WEAK_RULES (currently disabled)
		Initial revision setting up for easy modifications.
		Had to re-order prs attribute handling before
		rule allocation in the rule map to pave way for
		attribute-based rule connections.
		Passes regression tests.  


2007-12-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01:
	  Branch for another round of ACT compatibility.  
	  First revision:
		Object/lang/PRS.cc AST/PRS.cc: allow literals to take 
			optional 3rd parameter for transistor 
			type (ignored in middle-end).
		AST/SPEC.cc: loop/conditionals warning with 'where'
		Object/lang/PRS_macro_common.cc: 
			allow optional 3rd (type) parameter for passn/passp
		Object/lang/SPEC_common.{cc,h}, SPEC_registry.cc:
			new directive 'supply_x': currently does nothing.
		parser/hackt-parse.yy.in: