@@ -3,7 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
-2007-12-11	David Fang		<fangism@users.sourceforge.net>
+2007-12-12	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-05:
+	  One more patch for consistent behavior with reference prsim:
+		flush_pending_queue initially check non-weak pulls, 
+		then before flushing_pending_events to main queue, 
+		check for weak-rule vs opposite non-weak pull if necessary.
+	  No regressions, but needs new test case contributed by Clint.
+
 
 	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-04:
 	  Some fixes for pending-queue insertion, w.r.t. weak rules.  
